# platform-storage-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  k8s.mk  pv.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-image.yml  release.yaml  release.yml  remove-automerge.yml  setup-automerge.yml  test.yaml  update-pre-commit.yml
charts/: .gitignore
charts/platform-storage/: Chart.yaml  values-dev.yaml  values.yaml
charts/platform-storage/templates/: _helpers.tpl  admission-controller-deployment.yaml  admission-controller-rbac.yaml  admission-controller-service.yaml  admission-controller-webhook.yaml  cron-job.yaml  deployment.yaml  externalSecret.yaml  ingress.yaml  metrics-deployment.yaml  metrics-service.yaml  secrets.yaml  service-monitor.yaml  service.yaml
deploy/: README
deploy/platformstorageapi/: Chart.yaml  values-client.yaml  values-dev-aws.yaml  values-dev-azure.yaml  values-dev.yaml  values-staging-azure.yaml  values-staging.yaml  values-template.yaml  values.yaml
deploy/platformstorageapi/templates/: deployment.yaml  ingress.yaml  platformstorageapi.gke.yml  service.yaml
platform_storage_api/: api.py  aws.py  cache.py  config.py  s3_storage.py  security.py  storage.py  storage_usage.py  trace.py  worker.py
platform_storage_api/fs/: local.py
src/platform_storage_api/: api.py  cache.py  config.py  kube_service.py  metrics.py  project_deleter.py  s3.py  s3_storage.py  security.py  storage.py  storage_usage.py  worker.py
src/platform_storage_api/admission_controller/: __main__.py  api.py  app.py  app_keys.py  schema.py  volume_resolver.py
src/platform_storage_api/fs/: local.py
tests/: Dockerfile  conftest.py  conftest_ac.py  test_smoke.py
tests/docker/: e2e.compose.yml
tests/docker/storage/: config.yml
tests/e2e/: tests.sh
tests/integration/: admin.py  auth.py  config.py  conftest.py  conftest_auth.py  conftest_clusters.py  conftest_docker.py  conftest_events.py  conftest_kube.py  conftest_moto.py  docker.py  test_ac.py  test_ac_api.py  test_api.py  test_api_sharing_resources.py  test_api_upload_multiple.py  test_api_websocket.py  test_metrics.py  test_project_deleter.py  test_storage_usage.py  test_storage_usage_service.py  test_worker.py
tests/integration/docker/: docker-compose.yml
tests/integration/docker/platform-auth/: Dockerfile
tests/k8s/: admission-controller-deployment.yaml  cluster.sh  postinstall-job.yaml  preinstall-job.yaml  rbac.yaml
tests/unit/: conftest.py  test_ac_mount_schema.py  test_ac_volume_resolver.py  test_cache.py  test_config.py  test_fs_local.py  test_storage.py  test_storage_usage.py
