[metadata]
name = platform-storage-api
description = Neu.ro platform storage api
url = https://github.com/neuro-inc/platform-storage-api
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
platforms = any
include_package_data = True
install_requires =
    aiodns==3.2.0
    aiofiles==24.1.0
    aiohttp==3.10.1
    cbor==1.0.0
    cchardet==2.1.7
    neuro-auth-client==22.6.1
    neuro-admin-client==23.5.0
    uvloop==0.19.0
    neuro-logging==24.4.0
    pydantic==2.8.2
    prometheus-client==0.20.0
    fastapi==0.112.0
    aiobotocore==2.13.1

[options.entry_points]
console_scripts =
    platform-storage-api = platform_storage_api.api:main

[options.extras_require]
dev =
    mypy==1.11.1
    pre-commit==3.8.0
    docker==7.1.0
    pytest==8.3.2
    pytest-asyncio==0.21.2
    pdbpp==0.10.3
    aioresponses==0.7.6
    pytest-docker==3.1.1
    pytest-aiohttp==1.0.5

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541


[isort]
profile=black
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
known_first_party=platform_storage_api
known_tests=tests

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    error
    ignore::DeprecationWarning:docker
    ignore::DeprecationWarning:aiohttp.helpers
    ignore::DeprecationWarning:jose.jwt
    ignore::DeprecationWarning:jose.jws
    ignore::DeprecationWarning:pkg_resources._vendor.pyparsing
    ignore:The loop argument is deprecated:DeprecationWarning:

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True

[mypy-aiofiles]
ignore_missing_imports = true

[mypy-aiohttp_security.*]
ignore_missing_imports = true

[mypy-cbor]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-uvloop]
ignore_missing_imports = true

[mypy-docker.*]
ignore_missing_imports = true

[mypy-prometheus_client.*]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-botocore.*]
ignore_missing_imports = true
