[metadata]
name = platform_storage_api
description = Neu.ro platform storage api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neuro-inc/platform-storage-api
license = Apache 2
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    aiobotocore==2.16.1
    aiodns==3.2.0
    aiofiles==24.1.0
    aiohttp==3.10.10
    cbor==1.0.0
    cchardet==2.1.7
    fastapi==0.115.6
    neuro-admin-client==25.1.0
    neuro-auth-client==22.6.1
    neuro-logging==25.1.0
    prometheus-client==0.21.1
    pydantic==2.10.4
    uvicorn==0.34.0
    uvloop==0.21.0
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
platforms = any
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    platform-storage-api = platform_storage_api.api:main
    platform-storage-metrics = platform_storage_api.metrics:main
    platform-storage-worker = platform_storage_api.worker:main

[options.extras_require]
dev =
    aioresponses==0.7.7
    docker==7.1.0
    mypy==1.11.2
    pdbpp==0.10.3
    pre-commit==4.0.1
    pytest==8.3.4
    pytest-aiohttp==1.0.5
    pytest-asyncio==0.25.1
    pytest-docker==3.1.1
    setuptools>=64
    setuptools-scm

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile = black
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
known_first_party = platform_storage_api
known_tests = tests

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings =
    error
    ignore::DeprecationWarning:docker
    ignore::DeprecationWarning:aiohttp.helpers
    ignore::DeprecationWarning:jose.jwt
    ignore::DeprecationWarning:jose.jws
    ignore::DeprecationWarning:pkg_resources._vendor.pyparsing
    ignore:The loop argument is deprecated:DeprecationWarning:

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True

[mypy-aiofiles]
ignore_missing_imports = true

[mypy-aiohttp_security.*]
ignore_missing_imports = true

[mypy-cbor]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-uvloop]
ignore_missing_imports = true

[mypy-docker.*]
ignore_missing_imports = true

[mypy-prometheus_client.*]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-botocore.*]
ignore_missing_imports = true
